--- a/src/main/resources/templates/assignment_index.html
+++ b/src/main/resources/templates/assignment_index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignments</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div th:insert="header :: header"></div>
 <a href="/Assignment/Create">Create new course</a>
 <table>
     <tr>
