--- a/src/main/resources/templates/assignmentSolution_index.html
+++ b/src/main/resources/templates/assignmentSolution_index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment Solution</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
     <ul>
