--- a/src/main/resources/templates/home_index.html
+++ b/src/main/resources/templates/home_index.html
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <ul>
-        <li><a href="/Assignment/Index">Assignment</a></li>
-        <li><a href="/AssignmentSolution/Index">Assignment Solution</a></li>
-        <li><a href="/Course/Index">Course</a></li>
-        <li><a href="/Group/Index">Group</a></li>
-        <li><a href="/Solution/Index">Solution</a></li>
-        <li><a href="/Student/Index">Student</a></li>
-        <li><a href="/Teacher/Index">Teacher</a></li>
-        <li><a href="/">Upload file</a></li>
-    </ul>
+<div th:insert="header :: header"></div>
+    Home
 </body>
 </html>
