--- a/src/main/resources/templates/student_index.html
+++ b/src/main/resources/templates/student_index.html
@@ -5,9 +5,10 @@
     <title>Index</title>
     <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
     <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
-    <script src="/webjars/bootstrap/4.31./js/bootstrap.min.js"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div th:insert="header :: header"></div>
     <table class="table table-striped">
         <thead class="thead-dark">
             <tr>
