--- a/src/main/resources/templates/assignmentSolution_index.html
+++ b/src/main/resources/templates/assignmentSolution_index.html
@@ -8,6 +8,7 @@
     <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div th:insert="header :: header"></div>
     <ul>
         <th:block th:each="as : ${assignmentSolutions}">
             <li th:utext="${as.getAssignment()}">..</li>
