--- a/src/main/resources/templates/assignment_form.html
+++ b/src/main/resources/templates/assignment_form.html
@@ -3,26 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment create</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<form action="#" th:action="@{/Assignment/Create}" th:object="${assignment}" enctype="multipart/form-data" method="post">
-    <table>
-        <tr>
-            <td>Title:</td>
-            <td><input type="text" th:field="*{title}" /></td>
-        </tr>
-        <tr>
-            <td>Content:</td>
-            <td><input type="text" th:field="*{content}" /></td>
-        </tr>
-        <tr>
-            <td>Attachment:</td>
-            <td><input type="file" name="file"/></td>
-        </tr>
-        <tr>
-            <td><button type="submit">Submit</button></td>
-        </tr>
-    </table>
+<div th:insert="header :: header"></div>
+<form action="#" th:action="${isCreateAction} ? @{/Assignment/Create} : @{/Assignment/Edit}" th:object="${assignment}" enctype="multipart/form-data" method="post">
+        <div class="form-group row">
+            <label for="titleInput" class="col-sm-2 col-form-label">Title:</label>
+            <div class="col-sm-6">
+                <input type="text" id="titleInput" th:field="*{title}" class="form-control"/>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Content:</label>
+            <div class="col-sm-6">
+                <input type="text" th:field="*{content}" class="form-control"/>
+            </div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-2 col-form-label">Attachment:</label>
+            <div class="col-sm-6">
+                <input type="file" name="file" class="form-control-file"/>
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-6">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </div>
 </form>
 
 </body>
