--- a/src/main/resources/templates/assignment_index.html
+++ b/src/main/resources/templates/assignment_index.html
@@ -9,18 +9,22 @@
 </head>
 <body>
 <div th:insert="header :: header"></div>
-<a href="/Assignment/Create">Create new course</a>
-<table>
+<a href="/Assignment/Create">Create new assignment</a>
+<table class="table table-striped">
+    <thead class="thead-dark">
     <tr>
         <th>Id</th>
         <th>Title</th>
         <th>Content</th>
     </tr>
+    </thead>
     <th:block th:each="assignment : ${assignments}">
         <tr>
             <td th:utext="${assignment.getId()}"></td>
             <td th:utext="${assignment.getTitle()}"></td>
             <td th:utext="${assignment.getContent()}"></td>
+            <td><a th:href="@{/Assignment/Edit(id=${assignment.getId()})}"/>Edit</td>
+            <td><a th:href="@{/Assignment/Delete(id=${assignment.getId()})}"/>Delete</td>
         </tr>
     </th:block>
 </table>
