--- a/src/main/resources/templates/assignment_form.html
+++ b/src/main/resources/templates/assignment_form.html
@@ -10,29 +10,51 @@
 <body>
 <div th:insert="header :: header"></div>
 <form action="#" th:action="${isCreateAction} ? @{/Assignment/Create} : @{/Assignment/Edit}" th:object="${assignment}" enctype="multipart/form-data" method="post">
-        <div class="form-group row">
-            <label for="titleInput" class="col-sm-2 col-form-label">Title:</label>
-            <div class="col-sm-6">
-                <input type="text" id="titleInput" th:field="*{title}" class="form-control"/>
-            </div>
+    <div class="form-group row">
+        <label for="titleInput" class="col-sm-2 col-form-label">Title:</label>
+        <div class="col-sm-6">
+            <input type="text" id="titleInput" th:field="*{title}" class="form-control"/>
         </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Content:</label>
-            <div class="col-sm-6">
-                <input type="text" th:field="*{content}" class="form-control"/>
-            </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Content:</label>
+        <div class="col-sm-6">
+            <input type="text" th:field="*{content}" class="form-control"/>
         </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Attachment:</label>
-            <div class="col-sm-6">
-                <input type="file" name="file" class="form-control-file"/>
-            </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Course:</label>
+        <div class="col-sm-6">
+            <select th:field="*{course}" class="form-control">
+                <option th:each="cour : ${courses}" th:value="${cour.getId()}"
+                        th:text="${cour}"
+                        th:selected="${courses.get(0)}">
+                </option>
+            </select>
         </div>
-        <div class="form-group row">
-            <div class="col-sm-6">
-                <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Teacher:</label>
+        <div class="col-sm-6">
+            <select th:field="*{teacher}" class="form-control">
+                <option th:each="teach : ${teachers}" th:value="${teach.getId()}"
+                        th:text="${teach}"
+                        th:selected="${teachers.get(0)}">
+                </option>
+            </select>
         </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Attachment:</label>
+        <div class="col-sm-6">
+            <input type="file" name="file" class="form-control-file"/>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-6">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
 </form>
 
 </body>
