--- a/src/main/resources/templates/course_form.html
+++ b/src/main/resources/templates/course_form.html
@@ -3,26 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Course create</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
+<div th:insert="header :: header"></div>
 <form action="#" th:action="${isCreate} ? @{/Course/Create} : @{/Course/Edit}" th:object="${course}" method="post">
-    <table>
-        <tr>
-            <td>Id:</td>
-            <td><input type="hidden" th:field="*{id}" /></td>
-        </tr>
-        <tr>
-            <td>Title:</td>
-            <td><input type="text" th:field="*{title}" /></td>
-        </tr>
-        <tr>
-            <td>ECTS:</td>
-            <td><input type="number" th:field="*{ects}" /></td>
-        </tr>
-        <tr>
-            <td><button type="submit">Submit</button></td>
-        </tr>
-    </table>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Title:</label>
+        <div class="col-sm-6">
+            <input type="text" th:field="*{title}" class="form-control"/>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">ECTS:</label>
+        <div class="col-sm-6">
+            <input type="number" th:field="*{ects}" class="form-control"/>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-6">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
 </form>
 </body>
 </html>
