Added solution create method

--- a/src/main/resources/templates/solution_index.html
+++ b/src/main/resources/templates/solution_index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div th:insert="header :: header"></div>
+<a href="/Solution/Create">Create new Solution</a>
 <table class="table table-striped">
     <thead class="thead-dark">
     <tr>
