--- a/src/main/resources/templates/solution_form.html
+++ b/src/main/resources/templates/solution_form.html
@@ -3,21 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <title>Solution</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
+    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-<form action="#" th:action="${isCreate} ? @{/Solution/Create} : @{/Solution/Edit}" th:object="${solution}" method="post">
-    <table>
-        <tr>
-            <td><input type="hidden" th:field="*{id}" /></td>
-        </tr>
-        <tr>
-            <td>Content:</td>
-            <td><input class="form-text" type="text" th:field="*{content}" /></td>
-        </tr>
-        <tr>
-            <td><button type="submit">Submit</button></td>
-        </tr>
-    </table>
+<div th:insert="header :: header"></div>
+<form action="#" th:action="${isCreate} ? @{/Solution/Create} : @{/Solution/Edit}" th:object="${solution}" enctype="multipart/form-data" method="post">
+    <div class="form-group row">
+        <label for="titleInput" class="col-sm-2 col-form-label">Content:</label>
+        <div class="col-sm-6">
+            <input type="text" id="titleInput" th:field="*{content}" class="form-control"/>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Grade:</label>
+        <div class="col-sm-6">
+            <input type="number" th:field="*{grade}" class="form-control"/>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Student:</label>
+        <div class="col-sm-6">
+            <select th:field="*{student}" class="form-control">
+                <option th:each="st : ${students}" th:value="${st.getId()}"
+                        th:text="${st}"
+                        th:selected="${students.get(0)}">
+                </option>
+            </select>
+        </div>
+    </div>
+    <div class="form-group row">
+        <label class="col-sm-2 col-form-label">Attachment:</label>
+        <div class="col-sm-6">
+            <input type="file" name="file" class="form-control-file"/>
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-sm-6">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </div>
 </form>
 </body>
 </html>
