--- a/src/main/resources/templates/solution_index.html
+++ b/src/main/resources/templates/solution_index.html
@@ -34,5 +34,15 @@
     </th:block>
     </tbody>
 </table>
+<div>
+    <p class="h3">Uploaded files:</p>
+<ul class="list-group">
+<th:block th:each="file : ${files}">
+    <li class="list-group-item">
+        <a th:href="${file}" th:text="${file}" />
+    </li>
+</th:block>
+</ul>
+</div>
 </body>
 </html>
