--- a/src/main/resources/templates/solution_form.html
+++ b/src/main/resources/templates/solution_form.html
@@ -10,6 +10,7 @@
 <body>
 <div th:insert="header :: header"></div>
 <form action="#" th:action="${isCreate} ? @{/Solution/Create} : @{/Solution/Edit}" th:object="${solution}" enctype="multipart/form-data" method="post">
+    <input type="hidden" th:field="*{id}">
     <div class="form-group row">
         <label for="titleInput" class="col-sm-2 col-form-label">Content:</label>
         <div class="col-sm-6">
