Modified assignment and solution model, moved views to separate fragments.

--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -37,6 +37,7 @@
                     <a class="dropdown-item" href="/Group/Index">Group</a>
                     <a class="dropdown-item" href="/Student/Index">Student</a>
                     <a class="dropdown-item" href="/Teacher/Index">Teacher</a>
+                    <a class="dropdown-item" href="/FileHistory/Index">File history</a>
                 </div>
             </li>
         </ul>
