--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -13,6 +13,7 @@
     <td th:utext="${solution.getStudent().toString()}"></td>
     <td th:utext="${solution.getContent()}"></td>
     <td th:utext="${solution.getGrade()}"></td>
+    <td th:utext="${solution.getAssignment()}"></td>
 </tr>
 
 <div th:fragment="div_view(solution)" class="list-group-item list-group-item-light">
@@ -31,6 +32,10 @@
     <div class="form-group row">
         <p class="col-sm-2">Grade:</p>
         <p th:utext="${solution.getGrade()}" class="col-sm-6"></p>
+    </div>
+    <div class="form-group row">
+        <p class="col-sm-2">Assignment:</p>
+        <p th:utext="${solution.getAssignment()}" class="col-sm-6"></p>
     </div>
 </div>
 
