--- a/src/main/resources/templates/solution_index.html
+++ b/src/main/resources/templates/solution_index.html
@@ -17,6 +17,7 @@
         <th scope="col">Student</th>
         <th scope="col">Content</th>
         <th scope="col">Grade</th>
+        <th scope="col">Assignment</th>
     </tr>
     </thead>
     <tbody>
