--- a/src/main/resources/templates/solution_form.html
+++ b/src/main/resources/templates/solution_form.html
@@ -19,6 +19,12 @@
         </div>
     </div>
     <div class="form-group row">
+        <label for="isFinished" class="col-sm-2 col-form-label">Finished:</label>
+        <div class="form-check">
+            <input type="checkbox" id="isFinished" th:field="*{finished}" class="form-control"/>
+        </div>
+    </div>
+    <div class="form-group row">
         <label class="col-sm-2 col-form-label">Grade:</label>
         <div class="col-sm-6">
             <select th:field="*{grade}" class="form-control">
