--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -14,6 +14,7 @@
     <td th:utext="${solution.getContent()}"></td>
     <td th:utext="${solution.getGrade()}"></td>
     <td th:utext="${solution.getAssignment()}"></td>
+    <td th:utext="${solution.isFinished()}"></td>
     <td><a th:href="@{/Solution/Edit(id=${solution.getId()})}"/>Edit</td>
     <td><a th:href="@{/Solution/Delete(id=${solution.getId()})}"/>Delete</td>
 </tr>
@@ -38,6 +39,10 @@
     <div class="form-group row">
         <p class="col-sm-2">Assignment:</p>
         <p th:utext="${solution.getAssignment()}" class="col-sm-6"></p>
+    </div>
+    <div class="form-group row">
+        <p class="col-sm-2">Finished:</p>
+        <p th:utext="${solution.isFinished()}" class="col-sm-6"></p>
     </div>
 </div>
 
