--- a/src/main/resources/templates/solution_index.html
+++ b/src/main/resources/templates/solution_index.html
@@ -18,6 +18,7 @@
         <th scope="col">Content</th>
         <th scope="col">Grade</th>
         <th scope="col">Assignment</th>
+        <th scope="col">Finished</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
     </tr>
