Added authentication. Code refactoring.

--- a/src/main/resources/templates/course_form.html
+++ b/src/main/resources/templates/course_form.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Course create</title>
-    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
-    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
 <div th:insert="header :: header"></div>
