--- a/src/main/resources/templates/upload_form.html
+++ b/src/main/resources/templates/upload_form.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Upload File</title>
+    <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
     <div th:if="${message}">
