--- a/src/main/resources/templates/course_fragments.html
+++ b/src/main/resources/templates/course_fragments.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Course fragments</title>
+    <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
 <div th:fragment="edit">
