--- a/src/main/resources/templates/fileHistory_fragments.html
+++ b/src/main/resources/templates/fileHistory_fragments.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Fragments</title>
-    <link rel="stylesheet" href="/webjars/bootstrap/4.3.1/css/bootstrap.min.css">
-    <script src="/webjars/jquery/3.0.0/jquery.min.js"></script>
-    <script src="/webjars/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
 <tr th:fragment="row_view(fh = ${fh})">
