Working on main app functionality.

--- a/src/main/resources/templates/student_index.html
+++ b/src/main/resources/templates/student_index.html
@@ -15,6 +15,7 @@
                 <th scope="col">Last name</th>
                 <th scope="col">Faculty</th>
                 <th scope="col">Year</th>
+                <th scope="col">Courses</th>
             </tr>
         </thead>
         <tbody>
@@ -25,6 +26,7 @@
                     <td th:utext="${student.getLastName()}"></td>
                     <td th:utext="${student.getFaculty()}"></td>
                     <td th:utext="${student.getCurrentYear()}"></td>
+                    <td><a th:href="@{/Course/MyCourses(id=${student.getId()})}"/>Courses</td>
                 </tr>
             </th:block>
         </tbody>
