--- a/src/main/resources/templates/course_form.html
+++ b/src/main/resources/templates/course_form.html
@@ -14,6 +14,7 @@
         <label class="col-sm-2 col-form-label">Title:</label>
         <div class="col-sm-6">
             <input type="text" th:field="*{title}" class="form-control"/>
+            <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="text-danger">Title error</p>
         </div>
     </div>
     <div class="form-group row">
