--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -18,7 +18,7 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/Work/Index?studentId=1">My work</a>
+                <a class="nav-link" href="/Work/Index">My work</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/Course/Index">Course</a>
