--- a/src/main/resources/templates/assignment_index.html
+++ b/src/main/resources/templates/assignment_index.html
@@ -40,5 +40,7 @@
                 <a th:href="${file}" th:text="${file}" />
             </li>
         </th:block>
+    </ul>
+</div>
 </body>
 </html>
