--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -13,6 +13,7 @@
     <td th:utext="${solution.getGrade()}"></td>
     <td th:utext="${solution.getAssignment()}"></td>
     <td th:utext="${solution.isFinished()}"></td>
+    <td th:utext="${solution.getCreationDate()}"></td>
     <td><a th:href="@{/Solution/Edit(id=${solution.getId()})}"/>Edit</td>
     <td><a th:href="@{/Solution/Delete(id=${solution.getId()})}"/>Delete</td>
 </tr>
@@ -41,6 +42,14 @@
     <div class="form-group row">
         <p class="col-sm-2">Finished:</p>
         <p th:utext="${solution.isFinished()}" class="col-sm-6"></p>
+    </div>
+    <div class="form-group row">
+        <p class="col-sm-2">Finished:</p>
+        <p th:utext="${solution.isFinished()}" class="col-sm-6"></p>
+    </div>
+    <div class="form-group row">
+        <p class="col-sm-2">Creation date:</p>
+        <p th:utext="${solution.getCreationDate()}" class="col-sm-6"></p>
     </div>
 </div>
 
