--- a/src/main/resources/templates/solution_index.html
+++ b/src/main/resources/templates/solution_index.html
@@ -20,6 +20,7 @@
         <th scope="col">Creation date</th>
         <th scope="col">Edit</th>
         <th scope="col">Delete</th>
+        <th scope="col">Comments</th>
     </tr>
     </thead>
     <tbody>
