--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -16,6 +16,11 @@
     <td th:utext="${solution.getCreationDate()}"></td>
     <td><a th:href="@{/Solution/Edit(id=${solution.getId()})}"/>Edit</td>
     <td><a th:href="@{/Solution/Delete(id=${solution.getId()})}"/>Delete</td>
+    <td>
+        <a th:href="@{/Comment/Index(solutionId=${solution.getId()})}">Show</a>
+        <a th:href="@{/Comment/Create(solutionId=${solution.getId()})}">Add</a>
+    </td>
+
 </tr>
 
 <div th:fragment="div_view(solution)" class="list-group-item list-group-item-light">
@@ -44,13 +49,13 @@
         <p th:utext="${solution.isFinished()}" class="col-sm-6"></p>
     </div>
     <div class="form-group row">
-        <p class="col-sm-2">Finished:</p>
-        <p th:utext="${solution.isFinished()}" class="col-sm-6"></p>
-    </div>
-    <div class="form-group row">
         <p class="col-sm-2">Creation date:</p>
         <p th:utext="${solution.getCreationDate()}" class="col-sm-6"></p>
     </div>
+    <a th:href="@{/Comment/Index(solutionId=${solution.getId()})}">
+        <button class="btn btn-primary">Show comments</button>
+    </a>
+
 </div>
 
 </body>
