--- a/src/main/resources/templates/comment_index.html
+++ b/src/main/resources/templates/comment_index.html
@@ -6,7 +6,7 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header :: header"></div>
+<div th:insert="header_user :: header(user=${user})"></div>
 <div>
     <div th:if="${comments.isEmpty()}">
         <h2>No comments available</h2>
