--- a/src/main/resources/templates/courseAssignments_index.html
+++ b/src/main/resources/templates/courseAssignments_index.html
@@ -6,7 +6,7 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header :: header"></div>
+<div th:insert="header_user :: header(user=${user})"></div>
 <div class="list-group">
     <div class="list-group-item">
         <p th:utext="${course}"></p>
