--- a/src/main/resources/templates/courseStudentRegister_form.html
+++ b/src/main/resources/templates/courseStudentRegister_form.html
@@ -6,7 +6,7 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header :: header"></div>
+<div th:insert="header_user :: header(user=${user})"></div>
 
 <form action="#" th:action="@{/Course/Register}" th:object="${mapping}" enctype="multipart/form-data" method="post">
     <div class="form-group row">
