--- a/src/main/resources/templates/course_index.html
+++ b/src/main/resources/templates/course_index.html
@@ -6,7 +6,7 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<div th:insert="header :: header"></div>
+<div th:insert="header_user :: header(user=${user})"></div>
 <div class="btn-group">
     <a href="/Course/Create">
         <button type="button" class="btn btn-primary btn-sm">Create course</button>
