--- a/src/main/resources/templates/header_user.html
+++ b/src/main/resources/templates/header_user.html
@@ -6,7 +6,7 @@
     <div th:replace="head_fragment :: scripts"></div>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="header">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="header(user)">
     <a class="navbar-brand" href="/">Smanager</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -18,7 +18,8 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/Work/Index">My work</a>
+                <a th:if="${user.getStudentUser() != null}" class="nav-link" href="/Work/Index">My work</a>
+                <a th:unless="${user.getStudentUser() != null}" class="nav-link" href="/Work/TeacherWork">My work</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/Course/Index">Course</a>
