--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -23,7 +23,7 @@
 
 </tr>
 
-<div th:fragment="div_view(solution)" class="list-group-item list-group-item-light">
+<div th:fragment="div_view(solution, user)" class="list-group-item list-group-item-light">
     <div class="form-group row">
         <p class="col-sm-2">Id:</p>
         <p th:utext="${solution.getId()}" class="col-sm-6"></p>
