Added functionality to add grades by teachers

--- a/src/main/resources/templates/solution_form.html
+++ b/src/main/resources/templates/solution_form.html
@@ -23,7 +23,7 @@
             <input type="checkbox" id="isFinished" th:field="*{finished}" class="form-control"/>
         </div>
     </div>
-    <div class="form-group row">
+    <div th:if="${!user.isStudent()}" class="form-group row">
         <label class="col-sm-2 col-form-label">Grade:</label>
         <div class="col-sm-6">
             <select th:field="*{grade}" class="form-control">
@@ -33,6 +33,9 @@
                 </option>
             </select>
         </div>
+    </div>
+    <div th:if="${user.isStudent()}">
+        <input type="hidden" th:field="*{grade}">
     </div>
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Student:</label>
