--- a/src/main/resources/templates/solution_fragment.html
+++ b/src/main/resources/templates/solution_fragment.html
@@ -52,8 +52,15 @@
         <p class="col-sm-2">Creation date:</p>
         <p th:utext="${solution.getCreationDate()}" class="col-sm-6"></p>
     </div>
+    <div class="form-group row">
+        <p class="col-sm-2">File:</p>
+        <p th:utext="${solution.getPath()}" class="col-sm-6"></p>
+    </div>
     <a th:href="@{/Comment/Index(solutionId=${solution.getId()})}">
         <button class="btn btn-primary">Show comments</button>
+    </a>
+    <a th:if="${!user.isStudent()}" th:href="@{/Solution/Edit(id=${solution.getId()})}">
+        <button class="btn btn-primary">Grade</button>
     </a>
 
 </div>
